refactor java bindings